# vaani

./: .gitignore  .vercelignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  autoconfig.bat  autoconfig.ps1  build.ps1  idea.md  install.ps1  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
app/: app.js  index.html  style.css
helper/: Cargo.toml
helper/src/: main.rs
site/: index.html
tests/: helper-test.ps1  hotkey-test.ps1  speech-test.ps1  verify-window.ps1
