[package]
name = "vaani-helper"
version = "0.1.0"
edition = "2021"
description = "Vaani local helper: types speech-recognized text into any focused app"

[[bin]]
name = "vaani"
path = "src/main.rs"

[dependencies]
enigo = "0.2"
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_Graphics_Gdi",
  "Win32_System_Threading",
  "Win32_System_LibraryLoader",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
